--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRM Inteligente</title>
+    <title>CRM Inteligente - FacilZap</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
     <style>
         body { font-family: 'Inter', sans-serif; }
         .modal-bg { background-color: rgba(0,0,0,0.5); }
-        .status-badge {
+        .status-badge, .tag-badge {
             padding: 0.25rem 0.75rem;
             border-radius: 9999px;
             font-size: 0.75rem;
@@ -24,6 +24,7 @@
         .status-risco { background-color: #fee2e2; color: #991b1b; }
         .status-inativo { background-color: #f3f4f6; color: #4b5563; }
         .status-sem-historico { background-color: #e0e7ff; color: #3730a3; }
+        .tag-fiel { background-color: #fef9c3; color: #854d0e; }
         .toast-container { position: fixed; top: 1.5rem; right: 1.5rem; z-index: 1000; }
         .toast-notification {
             background-color: #fff;
@@ -48,7 +49,7 @@
         <!-- Sidebar -->
         <div class="w-64 bg-gray-800 text-white flex flex-col">
             <div class="px-8 py-6 border-b border-gray-700">
-                <h2 class="text-2xl font-semibold">CRM</h2>
+                <h2 class="text-2xl font-semibold">CRM FacilZap</h2>
             </div>
             <nav class="flex-1 px-4 py-4 space-y-2">
                 <a href="#" id="sync-button" class="flex items-center px-4 py-2 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md transition-colors duration-200">
@@ -75,19 +76,18 @@
             <main class="flex-1 overflow-x-hidden overflow-y-auto bg-gray-100 p-6">
                 <div class="container mx-auto">
                     <!-- Filters -->
-                    <div class="bg-white p-4 rounded-lg shadow mb-6 flex items-center space-x-4">
-                       <div class="flex-1">
-                            <label for="search-input" class="sr-only">Buscar</label>
+                    <div class="bg-white p-4 rounded-lg shadow mb-6 flex items-center space-x-4 flex-wrap gap-4">
+                       <div class="flex-1 min-w-[250px]">
                             <div class="relative">
                                 <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                                     <i class="fas fa-search text-gray-400"></i>
                                 </div>
-                                <input type="text" id="search-input" class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Buscar por nome, e-mail ou telefone...">
+                                <input type="text" id="search-input" class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md" placeholder="Buscar por nome, e-mail...">
                             </div>
                         </div>
                         <div>
-                            <label for="filter-select" class="sr-only">Filtrar por Status</label>
-                            <select id="filter-select" class="rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                            <label for="filter-status" class="sr-only">Filtrar por Status</label>
+                            <select id="filter-status" class="rounded-md border-gray-300 shadow-sm">
                                 <option value="todos">Todos os Status</option>
                                 <option value="ativo">Ativo</option>
                                 <option value="em-risco">Em Risco</option>
@@ -95,41 +95,34 @@
                                 <option value="sem-historico">Sem Histórico</option>
                             </select>
                         </div>
+                        <div>
+                            <label for="filter-tag" class="sr-only">Filtrar por Tag</label>
+                            <select id="filter-tag" class="rounded-md border-gray-300 shadow-sm">
+                                <option value="todos">Todas as Tags</option>
+                                <option value="cliente-fiel">Cliente Fiel</option>
+                            </select>
+                        </div>
                     </div>
 
-                    <!-- Client Table -->
-                    <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-                        <table class="min-w-full divide-y divide-gray-200">
-                            <thead class="bg-gray-50">
-                                <tr>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cliente</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Última Compra</th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Total Gasto</th>
-                                    <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Ações</th>
-                                </tr>
-                            </thead>
-                            <tbody id="client-table-body" class="bg-white divide-y divide-gray-200">
-                                <!-- Client rows will be inserted here -->
-                            </tbody>
-                        </table>
-                         <div id="no-clients-message" class="hidden text-center py-12 px-4">
-                            <i class="fas fa-user-friends fa-3x text-gray-300"></i>
-                            <h3 class="mt-2 text-sm font-medium text-gray-900">Nenhum cliente encontrado</h3>
-                            <p class="mt-1 text-sm text-gray-500">Adicione um novo cliente ou ajuste seus filtros.</p>
-                        </div>
+                    <!-- Client Cards Grid -->
+                    <div id="client-cards-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+                        <!-- Client cards will be inserted here -->
+                    </div>
+                    <div id="no-clients-message" class="hidden text-center py-12 px-4 bg-white rounded-lg shadow">
+                        <i class="fas fa-user-friends fa-3x text-gray-300"></i>
+                        <h3 class="mt-2 text-sm font-medium text-gray-900">Nenhum cliente encontrado</h3>
+                        <p class="mt-1 text-sm text-gray-500">Clique em "Sincronizar Dados" ou adicione um novo cliente.</p>
                     </div>
                 </div>
             </main>
         </div>
     </div>
 
+    <!-- Modals (Add/Edit, Details, Settings) -->
     <!-- Client Add/Edit Modal -->
     <div id="client-modal" class="fixed z-10 inset-0 overflow-y-auto hidden">
         <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div>
-            </div>
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div>
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
             <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                 <form id="client-form">
@@ -137,47 +130,33 @@
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Adicionar Novo Cliente</h3>
                         <input type="hidden" id="client-id">
                         <div class="mt-4 space-y-4">
-                            <div>
-                                <label for="name" class="block text-sm font-medium text-gray-700">Nome</label>
-                                <input type="text" id="name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
-                            </div>
-                            <div>
-                                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                                <input type="email" id="email" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
-                            </div>
-                             <div>
-                                <label for="phone" class="block text-sm font-medium text-gray-700">Telefone</label>
-                                <input type="tel" id="phone" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                            </div>
-                             <div>
-                                <label for="birthday" class="block text-sm font-medium text-gray-700">Aniversário</label>
-                                <input type="date" id="birthday" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-                            </div>
+                            <div><label for="name" class="block text-sm font-medium text-gray-700">Nome</label><input type="text" id="name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
+                            <div><label for="email" class="block text-sm font-medium text-gray-700">Email</label><input type="email" id="email" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
+                            <div><label for="phone" class="block text-sm font-medium text-gray-700">Telefone</label><input type="tel" id="phone" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div>
+                            <div><label for="birthday" class="block text-sm font-medium text-gray-700">Aniversário</label><input type="date" id="birthday" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div>
                         </div>
                     </div>
                     <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">Salvar</button>
-                        <button type="button" id="cancel-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button>
+                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 sm:ml-3 sm:w-auto sm:text-sm">Salvar</button>
+                        <button type="button" id="cancel-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
     
-    <!-- Details Modal -->
+    <!-- Details Modal (NEW STRUCTURE) -->
     <div id="details-modal" class="fixed z-20 inset-0 overflow-y-auto hidden">
-        <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div>
-            </div>
+        <div class="flex items-center justify-center min-h-screen p-4 text-center sm:block">
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div>
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-            <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-2xl sm:w-full">
+            <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-3xl sm:w-full">
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                    <div class="flex justify-between items-center">
+                    <div class="flex justify-between items-start">
                          <h3 class="text-lg leading-6 font-medium text-gray-900" id="details-modal-title">Detalhes do Cliente</h3>
                          <button id="close-details-button" class="text-gray-400 hover:text-gray-600"><i class="fas fa-times fa-lg"></i></button>
                     </div>
-                    <div id="details-modal-content" class="mt-4">
+                    <div id="details-modal-content" class="mt-4 max-h-[70vh] overflow-y-auto">
                         <!-- Details content will be injected here -->
                     </div>
                 </div>
@@ -188,9 +167,7 @@
     <!-- Settings Modal -->
     <div id="settings-modal" class="fixed z-10 inset-0 overflow-y-auto hidden">
         <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div>
-            </div>
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div>
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
             <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                 <form id="settings-form">
@@ -198,23 +175,17 @@
                         <h3 class="text-lg leading-6 font-medium text-gray-900">Configurações</h3>
                         <div class="mt-6 border-t border-gray-200 pt-6">
                             <h4 class="text-md font-medium text-gray-800">Status dos Clientes</h4>
-                            <p class="text-sm text-gray-500 mb-4">Defina os intervalos em dias para cada status, com base na data da última compra.</p>
+                            <p class="text-sm text-gray-500 mb-4">Defina os intervalos em dias para cada status.</p>
                             <div class="space-y-4">
-                                <div>
-                                    <label for="status-ativo-days" class="block text-sm font-medium text-gray-700">Cliente Ativo (até X dias da última compra)</label>
-                                    <input type="number" id="status-ativo-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
-                                </div>
-                                <div>
-                                    <label for="status-risco-days" class="block text-sm font-medium text-gray-700">Cliente em Risco (até X dias da última compra)</label>
-                                    <input type="number" id="status-risco-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required>
-                                </div>
-                                 <p class="text-xs text-gray-500">Qualquer cliente com a última compra há mais tempo que o valor "Em Risco" será considerado "Inativo".</p>
+                                <div><label for="status-ativo-days" class="block text-sm font-medium text-gray-700">Cliente Ativo (até X dias)</label><input type="number" id="status-ativo-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
+                                <div><label for="status-risco-days" class="block text-sm font-medium text-gray-700">Cliente em Risco (até X dias)</label><input type="number" id="status-risco-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
+                                 <p class="text-xs text-gray-500">Acima do valor "Em Risco", o cliente é "Inativo".</p>
                             </div>
                         </div>
                     </div>
                     <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">Salvar</button>
-                        <button type="button" id="cancel-settings-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button>
+                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 sm:ml-3 sm:w-auto sm:text-sm">Salvar</button>
+                        <button type="button" id="cancel-settings-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button>
                     </div>
                 </form>
             </div>
