--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         <div class="flex-1 flex flex-col overflow-hidden">
             <header class="bg-white shadow-sm">
                 <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8 flex justify-between items-center">
-                    <h1 class="text-xl font-semibold text-gray-900">Painel de Clientes</h1>
+                    <div class="flex items-baseline">
+                        <h1 class="text-xl font-semibold text-gray-900">Painel de Clientes</h1>
+                        <span id="client-count-display" class="ml-4 text-sm font-normal text-gray-500"></span>
+                    </div>
                     <button id="add-client-button" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         <i class="fas fa-plus mr-2"></i> Adicionar Cliente
                     </button>
@@ -131,7 +134,7 @@
                         <input type="hidden" id="client-id">
                         <div class="mt-4 space-y-4">
                             <div><label for="name" class="block text-sm font-medium text-gray-700">Nome</label><input type="text" id="name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
-                            <div><label for="email" class="block text-sm font-medium text-gray-700">Email</label><input type="email" id="email" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div>
+                            <div><label for="email" class="block text-sm font-medium text-gray-700">Email</label><input type="email" id="email" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div>
                             <div><label for="phone" class="block text-sm font-medium text-gray-700">Telefone</label><input type="tel" id="phone" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div>
                             <div><label for="birthday" class="block text-sm font-medium text-gray-700">Aniversário</label><input type="date" id="birthday" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div>
                         </div>
@@ -145,7 +148,7 @@
         </div>
     </div>
     
-    <!-- Details Modal (NEW STRUCTURE) -->
+    <!-- Details Modal -->
     <div id="details-modal" class="fixed z-20 inset-0 overflow-y-auto hidden">
         <div class="flex items-center justify-center min-h-screen p-4 text-center sm:block">
             <div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div>
@@ -191,7 +194,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- Toast Container -->
     <div id="toast-container" class="toast-container"></div>
