--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Main content -->
         <div class="flex-1 flex flex-col overflow-hidden">
             <!-- PÁGINA DE CLIENTES -->
-            <div id="clients-page" class="page-content flex flex-col h-full">
+            <div id="clients-page" class="page-content flex flex-col">
                 <header class="bg-white shadow-sm">
                     <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8 flex justify-between items-center">
                         <div class="flex items-baseline">
@@ -93,8 +93,8 @@
                 </main>
             </div>
             
-            <!-- PÁGINA DE PRODUTOS (NOVA) -->
-            <div id="products-page" class="page-content hidden flex-col h-full">
+            <!-- PÁGINA DE PRODUTOS -->
+            <div id="products-page" class="page-content hidden flex-col">
                 <header class="bg-white shadow-sm">
                     <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8 flex justify-between items-center">
                         <div class="flex items-baseline">
@@ -118,7 +118,7 @@
         </div>
     </div>
 
-    <!-- Modals (Add/Edit, Details, Settings, Confirm) -->
+    <!-- Modals -->
     <div id="client-modal" class="fixed z-10 inset-0 overflow-y-auto hidden"><div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"><div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div><span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span><div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"><form id="client-form"><div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4"><h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Adicionar Novo Cliente</h3><input type="hidden" id="client-id"><div class="mt-4 space-y-4"><div><label for="name" class="block text-sm font-medium text-gray-700">Nome</label><input type="text" id="name" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div><div><label for="email" class="block text-sm font-medium text-gray-700">Email</label><input type="email" id="email" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div><div><label for="phone" class="block text-sm font-medium text-gray-700">Telefone</label><input type="tel" id="phone" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div><div><label for="birthday" class="block text-sm font-medium text-gray-700">Aniversário</label><input type="date" id="birthday" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"></div></div></div><div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse"><button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 sm:ml-3 sm:w-auto sm:text-sm">Salvar</button><button type="button" id="cancel-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button></div></form></div></div></div>
     <div id="details-modal" class="fixed z-20 inset-0 overflow-y-auto hidden"><div class="flex items-center justify-center min-h-screen p-4 text-center sm:block"><div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div><span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span><div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-3xl sm:w-full"><div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4"><div class="flex justify-between items-start"><h3 class="text-lg leading-6 font-medium text-gray-900" id="details-modal-title">Detalhes do Cliente</h3><button id="close-details-button" class="text-gray-400 hover:text-gray-600"><i class="fas fa-times fa-lg"></i></button></div><div id="details-modal-content" class="mt-4 max-h-[70vh] overflow-y-auto"></div></div></div></div></div>
     <div id="settings-modal" class="fixed z-10 inset-0 overflow-y-auto hidden"><div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"><div class="fixed inset-0 transition-opacity" aria-hidden="true"><div class="absolute inset-0 bg-gray-500 opacity-75 modal-bg"></div></div><span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span><div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"><form id="settings-form"><div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4"><h3 class="text-lg leading-6 font-medium text-gray-900">Configurações</h3><div class="mt-6 border-t border-gray-200 pt-6"><h4 class="text-md font-medium text-gray-800">Status dos Clientes</h4><p class="text-sm text-gray-500 mb-4">Defina os intervalos em dias para cada status.</p><div class="space-y-4"><div><label for="status-ativo-days" class="block text-sm font-medium text-gray-700">Cliente Ativo (até X dias)</label><input type="number" id="status-ativo-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div><div><label for="status-risco-days" class="block text-sm font-medium text-gray-700">Cliente em Risco (até X dias)</label><input type="number" id="status-risco-days" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" required></div><p class="text-xs text-gray-500">Acima do valor "Em Risco", o cliente é "Inativo".</p></div></div></div><div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse"><button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 sm:ml-3 sm:w-auto sm:text-sm">Salvar</button><button type="button" id="cancel-settings-button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button></div></form></div></div></div>
@@ -129,3 +129,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
