--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </div>
 
         <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden">
+        <!-- CORREÇÃO: A classe 'overflow-hidden' foi removida desta div -->
+        <div class="flex-1 flex flex-col">
             <!-- PÁGINA DE CLIENTES -->
             <div id="clients-page" class="page-content flex flex-col">
                 <header class="bg-white shadow-sm">
@@ -129,4 +130,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
