--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden">
+        <div class="flex-1 flex flex-col"> <!-- CORREÇÃO: Removido 'overflow-hidden' -->
             <!-- PÁGINA DE CLIENTES -->
             <div id="clients-page" class="page-content flex flex-col h-full">
                 <header class="bg-white shadow-sm">
@@ -178,3 +178,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
