--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
                     <a href="#" id="sync-button" class="flex items-center px-4 py-2 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md transition-colors duration-200">
                         <i class="fas fa-sync-alt w-6 text-center"></i><span class="ml-4">Sincronizar</span>
                     </a>
+                    
+                    <!-- Supabase Cloud Sync -->
+                    <div class="px-4 py-2">
+                        <p class="text-xs text-gray-500 mb-2">☁️ Nuvem (Supabase)</p>
+                        <div class="flex gap-2">
+                            <button onclick="SupabaseSync.sync()" class="flex-1 bg-green-600 hover:bg-green-700 text-white text-xs px-2 py-1.5 rounded" title="Salvar na nuvem">
+                                <i class="fas fa-cloud-upload-alt"></i> Salvar
+                            </button>
+                            <button onclick="SupabaseSync.download()" class="flex-1 bg-blue-600 hover:bg-blue-700 text-white text-xs px-2 py-1.5 rounded" title="Baixar da nuvem">
+                                <i class="fas fa-cloud-download-alt"></i> Baixar
+                            </button>
+                        </div>
+                    </div>
+                    
                     <a href="#" id="import-legacy-button" class="flex items-center px-4 py-2 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md transition-colors duration-200">
                         <i class="fas fa-file-import w-6 text-center"></i><span class="ml-4">Importar Legado</span>
                     </a>
